<resources>
    <string name="app_name">PlacePick</string>

    <!--Bottom bar item-->
    <string name="nav_home">홈</string>
    <string name="nav_board">게시판</string>
    <string name="nav_map">지도</string>
    <string name="nav_mypage">마이페이지</string>

    <!--Setting-->
    <string name="setting_title">반가워요!</string>
    <string name="setting_hint_nick">닉네임을 입력하세요.</string>
    <string name="setting_hint_place">핫플레이스를 선택하세요.</string>
    <string name="setting_complete">완료</string>
    <string name="setting_place_title">최대 3개까지 선택가능합니다.</string>
    <string name="setting_place_subtitle">*추후에 수정가능</string>

    <!--Login-->
    <string name="login_hint_id">아이디를 입력하세요.</string>
    <string name="login_hint_password">비밀번호를 입력하세요.</string>
    <string name="login_sign_in">회원가입</string>
    <string name="login_naver">네이버로 시작하기</string>
    <string name="login_subtitle">핫플레이스를 한번에,</string>

    <!--Main-->
    <string name="app_title">플레이스픽</string>
    
    <!--Hot Place-->
    <string name="place_Itaewon">이태원역</string>
    <string name="place_gangnam">강남역</string>
    <string name="place_konkuk">건대입구역</string>
    <string name="place_gyodae">교대역</string>
    <string name="place_ttukseom">뚝섬역</string>
    <string name="place_seoul">서울역</string>
    <string name="place_nonhyoen">논현역</string>
    <string name="place_sinchon">신촌·이대역</string>
    <string name="place_hoegi">회기역</string>
    <string name="place_yeonnam">연남동</string>
    <string name="place_yongnidam">용리단길</string>
    <string name="place_haebangchon">해방촌</string>
    <string name="place_yeouido">여의도한강공원</string>
    <string name="place_seongsu">성수카페거리</string>
    <string name="place_children">어린이대공원</string>
    <string name="place_dmc">DMC</string>

    <!--Board-->
    <string name="board_state_good">여유</string>

    <!--Borad Detail-->
    <string name="board_detail_title">제목</string>
    <string name="board_detail_content_summary">본문 요약</string>
    <string name="board_detail_date">작성 날짜</string>
    <string name="board_detail_write">글쓰기</string>
    <string name="board_post_hint_comment">댓글을 입력하세요.</string>
    <string name="board_post_comment_btn">입력</string>

    <!--Board Detail Write-->
    <string name="write_title">글 쓰기</string>
    <string name="write_hint_title">제목</string>
    <string name="write_hint_content">내용을 입력하세요.</string>
    <string name="write_post">게시</string>
</resources>